[package]
name = "os_with_bootloader"
version = "0.1.0"
edition = "2024"
[workspace]
members = ["kernel_with_bootloader"]

[build-dependencies]
bootloader = "0.11"
kernel_with_bootloader = { path = "kernel_with_bootloader", artifact = "bin", target = "x86_64-unknown-none" }

[dependencies]
ovmf-prebuilt.workspace = true


[workspace.dependencies]
bootloader_api = "0.11"
x86_64 = "0.14"
spin = "0.9"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
noto-sans-mono-bitmap = "0.2.0"
# used for UEFI booting in QEMU 
ovmf-prebuilt = "0.1.0-alpha.1"

